# algo_graph

./: .gitignore  CMakeLists.txt  gen.cpp  main.cpp
generator/: GenerateData.cpp  GenerateData.hpp  GraphBuilder.cpp  GraphBuilder.h  GraphBuilder.hpp  ManageFile.cpp  ManageFile.hpp  generate_data.py  rawdata
graph/: graph.h  vertex.h
graphviz/: basegraphviz.h
iterators/: GraphvizIterator.h  depthFirstSearch.h  vertexIterator.h
output/: graph.dot
utils/: helpers.h
